assets/css/nav.css
nav {
    background-color: rgb(17, 17, 17);
    border-bottom: 1px whitesmoke solid;
}

.nav-desktop {
    display: none;
}

.nav-mobile {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-block: 1rem;

}

.nav-mobile .grid-nav{
    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;
    gap: 1rem;
    font-size: .8rem;
    text-align: center;
}

ul {
    margin: 0;
    padding: 0;
}

ul li {
    list-style: none;

}

ul li .nav-mobile-img {
    margin: .5rem auto;
    max-width: 80%;
    padding-right: 1rem;
}

ul li img {
    margin: .5rem auto;
    max-width: 60%;
}

ul li a {
    color: whitesmoke;
    text-decoration: none;
    font-weight: 700;
}

/* Navigation menu for the Drills pages */

.nav-drills {
    position: fixed;
    bottom: 0;
    z-index: 9999;
    width: 100%;
    background-color: rgb(17, 17, 17);
}

.nav-drills-mobile {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    font-size: .7rem;
    padding: 0 .5rem 0;
}

.nav-drills-mobile img {
    width: 5rem;
}

@media ( min-width: 550px ) {
    .nav-drills-mobile {
        font-size: 1rem;
    }
}

@media ( min-width: 800px ) {

    /* Nav section for desktop */

    .nav-mobile {
        display: none;
    }

    .nav-desktop {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
    }
}

